--- a/01.FirstHtmlTask/index.html
+++ b/01.FirstHtmlTask/index.html
@@ -21,5 +21,19 @@
       <li>Vegetables</li>
       <li>Meat</li>
     </ul>
+    <ul type="none">
+      <li>Frontend</li>
+      <ul type="square">
+        <li>html</li>
+        <li>css</li>
+        <li>js</li>
+      </ul>
+      <li>Backend</li>
+      <ol type="1">
+        <li>html</li>
+        <li>css</li>
+        <li>js</li>
+      </ol>
+    </ul>
   </body>
 </html>
