--- a/06.Css-Task/background.html
+++ b/06.Css-Task/background.html
@@ -45,5 +45,26 @@
       <br />
       <a href="#"><img src=".//image/download.jfif" alt="" width="200" /></a>
     </div>
+    <div class="headd">
+        <br>
+        <table>
+            <tr>
+                <th>Films</th>
+                <th>IMDB</th>
+                <th>Views</th>
+            </tr>
+            <tr>
+                <td>Harry Potter</td>
+                <td>8.1</td>
+                <td>14500000</td>
+            </tr> 
+            <tr>
+                <td>The Pianist</td>
+                <td>8.5</td>
+                <td>20050000</td>
+            </tr>
+        </table>
+        <br>
+    </div>
   </body>
 </html>
