--- a/14.Responsive/index.html
+++ b/14.Responsive/index.html
@@ -32,6 +32,9 @@
             <button class="but1">Sing Up</button>
             <button class="but2">Login</button>
           </div>
+          <div class="menu">
+            <i class="fa-solid fa-bars"></i>
+          </div>
         </div>
       </div>
     </header>
@@ -110,7 +113,7 @@
       <div class="container">
         <div class="footer">
           <div class="quickly">
-           <div><h1>Quickly</h1></div> 
+            <div><h1>Quickly</h1></div>
             <div class="icons">
               <i class="fa-brands fa-facebook"></i>
               <i class="fa-brands fa-twitter"></i>
