--- a/16.Responsive-Furniture-website/index.html
+++ b/16.Responsive-Furniture-website/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./style.css" />
     <title>Document</title>
   </head>
@@ -33,19 +40,104 @@
                 repellat dignissimos laborum eveniet, sapiente ab impedit illum
                 fugit consequatur?
               </p>
-              <div class="input">
+              <form class="input">
                 <input
                   placeholder="Search Furniture"
                   type="text"
                   name=""
                   id=""
                 />
-                <img src="./Search.svg" alt="" />
-              </div>
+                <i class="fa-solid fa-magnifying-glass"></i>
+              </form>
             </div>
           </section>
         </div>
       </div>
     </section>
+    <div class="container">
+      <section class="why">
+        <h1>Why Choosing Us</h1>
+        <div class="class">
+          <div class="div">
+            <i class="fa-solid fa-check"></i>
+            <h5>Professionalism</h5>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero!
+            </p>
+            <a href="#">more info</a>
+          </div>
+          <div>
+            <i class="fa-solid fa-book"></i>
+            <h5>Professionalism</h5>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero!
+            </p>
+            <a href="#">more info</a>
+          </div>
+          <div>
+            <i class="fa-solid fa-square-check"></i>
+            <h5>Professionalism</h5>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero!
+            </p>
+            <a href="#">more info</a>
+          </div>
+          <div>
+            <i class="fa-solid fa-star"></i>
+            <h5>Professionalism</h5>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero!
+            </p>
+            <a href="#">more info</a>
+          </div>
+        </div>
+      </section>
+      <div class="container">
+        <footer class="footer">
+          <div><img src="./Asset 1 1.svg" alt="" /></div>
+          <div>
+            <nav>
+              <ul>
+                <li><a style="color: red" href="#">Features</a></li>
+                <li><a href="#">Our Features</a></li>
+                <li><a href="#">Pricing</a></li>
+                <li><a href="#">Affiliate Program</a></li>
+                <li><a href="#">Press Kit</a></li>
+              </ul>
+            </nav>
+          </div>
+          <div>
+            <nav>
+              <ul>
+                <li><a style="color: red" href="#">Support</a></li>
+                <li><a href="#">Account</a></li>
+                <li><a href="#">Help</a></li>
+                <li><a href="#">Contact Us</a></li>
+              </ul>
+            </nav>
+          </div>
+          <div>
+            <nav>
+              <ul>
+                <li><a style="color: red" href="#">Legal</a></li>
+                <li><a href="#">Privacy</a></li>
+                <li><a href="#">Terms of Use</a></li>
+              </ul>
+            </nav>
+          </div>
+          <div>
+            <nav>
+              <ul>
+                <li><a style="color: red" href="#">Sosial Media</a></li>
+                <li><a href="#">Twitter</a></li>
+                <li><a href="#">Product Hunt</a></li>
+                <li><a href="#">Instagram</a></li>
+                <li><a href="#">Github</a></li>
+              </ul>
+            </nav>
+          </div>
+        </footer>
+      </div>
+    </div>
   </body>
 </html>
