--- a/16.Responsive-Furniture-website/index.html
+++ b/16.Responsive-Furniture-website/index.html
@@ -20,17 +20,23 @@
         <div class="section">
           <header class="header">
             <img src="./Asset 1 1.svg" alt="" />
-            <nav>
-              <ul>
-                <li>
-                  <a href="#">Furniture</a><img src="./Vector 114.png" alt="" />
-                </li>
-                <li><a href="#">Shop</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Contact</a></li>
-              </ul>
-            </nav>
-            <img src="./Bag_fill.png" alt="" />
+            <div class="nav">
+              <nav>
+                <ul>
+                  <li>
+                    <a href="#">Furniture</a
+                    ><img src="./Vector 114.png" alt="" />
+                  </li>
+                  <li><a href="#">Shop</a></li>
+                  <li><a href="#">About Us</a></li>
+                  <li><a href="#">Contact</a></li>
+                </ul>
+              </nav>
+            </div>
+            <div class="img">
+              <img src="./Bag_fill.png" alt="" />
+              <i class="fa-solid fa-bars"></i>
+            </div>
           </header>
           <section class="main">
             <div class="make">
@@ -56,10 +62,10 @@
     </section>
     <div class="container">
       <section class="why">
-        <h1>Why Choosing Us</h1>
+        <h1 style="font-size: 20px; padding: 20px">Why Choosing Us</h1>
         <div class="class">
           <div class="div">
-            <i class="fa-solid fa-check"></i>
+            <img src="./icon.svg" alt="" />
             <h5>Professionalism</h5>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero!
@@ -67,7 +73,7 @@
             <a href="#">more info</a>
           </div>
           <div>
-            <i class="fa-solid fa-book"></i>
+            <img src="./icon (1).svg" alt="" />
             <h5>Professionalism</h5>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero!
@@ -75,7 +81,7 @@
             <a href="#">more info</a>
           </div>
           <div>
-            <i class="fa-solid fa-square-check"></i>
+            <img src="./icon (2).svg" alt="" />
             <h5>Professionalism</h5>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero!
@@ -83,7 +89,7 @@
             <a href="#">more info</a>
           </div>
           <div>
-            <i class="fa-solid fa-star"></i>
+            <img src="./icon (4).svg" alt="" />
             <h5>Professionalism</h5>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero!
@@ -98,7 +104,9 @@
           <div>
             <nav>
               <ul>
-                <li><a style="color: red" href="#">Features</a></li>
+                <li>
+                  <a style="color: rgb(247, 159, 159)" href="#">Features</a>
+                </li>
                 <li><a href="#">Our Features</a></li>
                 <li><a href="#">Pricing</a></li>
                 <li><a href="#">Affiliate Program</a></li>
@@ -109,7 +117,9 @@
           <div>
             <nav>
               <ul>
-                <li><a style="color: red" href="#">Support</a></li>
+                <li>
+                  <a style="color: rgb(247, 145, 145)" href="#">Support</a>
+                </li>
                 <li><a href="#">Account</a></li>
                 <li><a href="#">Help</a></li>
                 <li><a href="#">Contact Us</a></li>
@@ -119,7 +129,7 @@
           <div>
             <nav>
               <ul>
-                <li><a style="color: red" href="#">Legal</a></li>
+                <li><a style="color: rgb(245, 145, 145)" href="#">Legal</a></li>
                 <li><a href="#">Privacy</a></li>
                 <li><a href="#">Terms of Use</a></li>
               </ul>
@@ -128,7 +138,9 @@
           <div>
             <nav>
               <ul>
-                <li><a style="color: red" href="#">Sosial Media</a></li>
+                <li>
+                  <a style="color: rgb(245, 136, 136)" href="#">Sosial Media</a>
+                </li>
                 <li><a href="#">Twitter</a></li>
                 <li><a href="#">Product Hunt</a></li>
                 <li><a href="#">Instagram</a></li>
