--- a/16.Responsive-Furniture-website/index.html
+++ b/16.Responsive-Furniture-website/index.html
@@ -20,7 +20,7 @@
         <div class="section">
           <header class="header">
             <img src="./Asset 1 1.svg" alt="" />
-            <div class="nav">
+            <div class="link">
               <nav>
                 <ul>
                   <li>
@@ -102,11 +102,9 @@
         <footer class="footer">
           <div><img src="./Asset 1 1.svg" alt="" /></div>
           <div>
+            <h5>Features</h5>
             <nav>
               <ul>
-                <li>
-                  <a style="color: rgb(247, 159, 159)" href="#">Features</a>
-                </li>
                 <li><a href="#">Our Features</a></li>
                 <li><a href="#">Pricing</a></li>
                 <li><a href="#">Affiliate Program</a></li>
@@ -115,11 +113,9 @@
             </nav>
           </div>
           <div>
+            <h5>Support</h5>
             <nav>
               <ul>
-                <li>
-                  <a style="color: rgb(247, 145, 145)" href="#">Support</a>
-                </li>
                 <li><a href="#">Account</a></li>
                 <li><a href="#">Help</a></li>
                 <li><a href="#">Contact Us</a></li>
@@ -127,20 +123,19 @@
             </nav>
           </div>
           <div>
+            <h5>Legal</h5>
             <nav>
               <ul>
-                <li><a style="color: rgb(245, 145, 145)" href="#">Legal</a></li>
+                
                 <li><a href="#">Privacy</a></li>
                 <li><a href="#">Terms of Use</a></li>
               </ul>
             </nav>
           </div>
           <div>
+            <h5>Sosial Media</h5>
             <nav>
               <ul>
-                <li>
-                  <a style="color: rgb(245, 136, 136)" href="#">Sosial Media</a>
-                </li>
                 <li><a href="#">Twitter</a></li>
                 <li><a href="#">Product Hunt</a></li>
                 <li><a href="#">Instagram</a></li>
