--- a/19.Scss-ProjectHome/home.html
+++ b/19.Scss-ProjectHome/home.html
@@ -10,7 +10,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="./assets/main.css" />
+    <link rel="stylesheet" href="./assets/sass/main.css" />
     <title>Document</title>
   </head>
   <body>
@@ -18,7 +18,7 @@
       <header>
         <div class="container">
           <div class="header">
-            <div><h1>Prosecurse</h1></div>
+            <div><h3>Prosecurse</h3></div>
             <div>
               <nav>
                 <ul>
@@ -38,13 +38,30 @@
           <div class="section">
             <div class="up">
               <h1>LEGAL PRO SERVICES</h1>
-              <p>
+              <h4>
                 We know how large objects will act, but things on a small scale.
-              </p>
+              </h4>
               <div class="buttons">
-                <button>Get Quote Now</button>
-                <button>Learn More</button>
+                <button class="get">Get Quote Now</button>
+                <button class="learn">Learn More</button>
               </div>
+            </div>
+          </div>
+          <div class="down">
+            <div class="box box1">
+              <img src="./assets/images/001-auction.svg" alt="" />
+              <h3>Family Law</h3>
+              <p>We focus on egonomics and meeting you where you work.</p>
+            </div>
+            <div class="box box2">
+              <img src="./assets/images/line icons.svg" alt="" />
+              <h3>Business Law</h3>
+              <p>We focus on egonomics and meeting you where you work.</p>
+            </div>
+            <div class="box box3">
+              <img src="./assets/images/icn settings .icn-lg.svg" alt="" />
+              <h3>Trust & Estates</h3>
+              <p>We focus on egonomics and meeting you where you work.</p>
             </div>
           </div>
         </div>
